--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="d-flex justify-content-between">
       <h1 class="h2">Gilos.uz/smartphones</h1>
 
-      <button class="btn btn-primary px-4" data-bs-toggle="modal" data-bs-target="#edit-student-modal">
+      <button class="btn btn-primary px-4 product-add" data-bs-toggle="modal" data-bs-target="#edit-student-modal">
         <span class="me-2">Add product</span>
         <i class="fa-solid fa-plus"></i>
       </button>
@@ -24,7 +24,7 @@
     <div class="row mt-5">
       <div class="col-3">
         <h2 class="h4 mb-4">Filter</h2>
-        <form action="#">
+        <form action="#" id="filter-form">
           <div class="mb-3">
             <label for="search" class="form-label">Search</label>
             <input type="search" class="form-control" id="search" placeholder="Falonchi">
@@ -67,22 +67,22 @@
           <h2 class="h4 mb-4">Products list</h2>
           <p>Count: 4</p>
         </div>
-
+          
         <ul id="phones-wrapper" class="row list-unstyled g-3">
-
+        <!-- ===== template-li ==== -->
         </ul>
       </section>
     </div>
   </div>
 
-                 <!-- ========== MODAL ========== -->
+        <!-- ========== MODAL ========== -->
 
 
   <div class="modal fade" id="edit-student-modal" tabindex="-1" aria-labelledby="editStudentModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="editStudentModalLabel">Add product</h5>
+          <h5 class="modal-title" id="editproductModalTitle">Add product</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
 
@@ -92,34 +92,34 @@
           <form class="product-form">
             <div class="mb-3">
               <label for="product-title" class="form-label">Title</label>
-              <input type="text" class="form-control" id="product-title" placeholder="Telefon nomi">
+              <input type="text" class="form-control" id="title" placeholder="Telefon nomi">
             </div>
 
             <div class="mb-3">
               <label for="price" class="form-label">Narxi</label>
-              <input type="number" class="form-control" id="product-price" placeholder="1240000">
+              <input type="number" class="form-control" id="price" placeholder="1240000">
             </div>
 
             <div class="mb-3">
-              <label for="product-manufacturer" class="form-label">Manufacturer</label>
-              <select class="form-select" id="product-manufacturer">
+              <label for="manufacturer" class="form-label">Manufacturer</label>
+              <select class="form-select" id="manufacturer">
                 <option selected disabled value="0">Select a manufacturer</option>
                  <!-- ========== js-options ========== -->
-              </select>
+              </select>  
             </div>
 
             <div class="mb-3">
               <label for="benefits" class="form-label">Benefits</label>
-              <input type="text" class="form-control" id="product-benefits" placeholder="150">
+              <input type="text" class="form-control" id="benefits" placeholder="150">
 
               <ul class="d-flex flex-wrap list-unstyled mt-3">
-                <li class="me-1 mb-1"><button type="button" class="btn btn-sm badge rounded-pill btn-danger">8gb</button></li>
-                <li class="me-1 mb-1"><button type="button" class="btn btn-sm badge rounded-pill btn-danger">128gb</button></li>
-                <li class="me-1 mb-1"><button type="button" class="btn btn-sm badge rounded-pill btn-danger">Waterproof</button></li>
-                <li class="me-1 mb-1"><button type="button" class="btn btn-sm badge rounded-pill btn-danger">Falon yaxshi tarafi</button></li>
+                <li class="add-benefit-item me-1 mb-1"><button type="button" class="btn btn-sm badge rounded-pill btn-danger">8gb</button></li>
+                <li class="add-benefit-item me-1 mb-1"><button type="button" class="btn btn-sm badge rounded-pill btn-danger">128gb</button></li>
+                <li class="add-benefit-item me-1 mb-1"><button type="button" class="btn btn-sm badge rounded-pill btn-danger">Waterproof</button></li>
+                <li class="add-benefit-item me-1 mb-1"><button type="button" class="btn btn-sm badge rounded-pill btn-danger">Falon yaxshi tarafi</button></li>
               </ul>
             </div>
-            <button type="submit" class="btn btn-primary d-block w-100 p-2">Add product</button>
+            <button type="submit" class="product-button btn btn-primary d-block w-100 p-2">Add product</button>
           </form>
         </div>
       </div>
@@ -128,19 +128,19 @@
 
 
 
-  <!-- =========== TEMPALATE ========== -->
+       <!-- =========== TEMPALATE ========== -->
 
   <template id="phones-template">
     <li class="col-4">
     <div class="card">
-      <img src="https://picsum.photos/300/200" alt="" class="card-img-top">
+      <img src="https://picsum.photos/id/200/300/200" alt="" class="card-img-top">
       <div class="card-body">
         <h3 class="card-title">Gadget title</h3>
         <p class="card-text fw-bold"><mark class="mark">2.000.000</mark></p>
-        <p class="card-text"><s>2.000.000</s></p>
+        <!-- <p class="card-text"><s>2.000.000</s></p> -->
         <p class="badge bg-success">Xiaomi (gadget firmasi)</p>
 
-        <p class="card-text">12.05.2022</p>
+        <p class="card-text product-date"></p>
 
         <ul class="benefit-list d-flex flex-wrap list-unstyled">
           <!-- <li class="badge bg-primary me-1 mb-1">8gb</li>
@@ -150,12 +150,14 @@
         </ul>
 
         <div class="position-absolute top-0 end-0 d-flex">
-          <button class="btn rounded-0 btn-secondary"><i class="fa-solid fa-pen"></i></button>
-          <button class="btn rounded-0 btn-danger"><i class="fa-solid fa-trash"></i></button>
+          <button class="btn rounded-0 btn-secondary edit-product" data-id="" data-bs-toggle="modal" data-bs-target="#edit-student-modal"><i class="fa-solid fa-pen" style="pointer-events: none;"></i></button>
+          <button class="btn rounded-0 btn-danger deleted-product" data-id=""><i class="fa-solid fa-trash" style="pointer-events: none;"></i></button>
         </div>
       </div>
     </div>
-  </li></template>
+  </li>
+</template>
+<script src="./test.js"></script>
 
   <script src="js/bootstrap.bundle.min.js"></script>
 
